--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -1,6 +1,6 @@
 .contactSection {
   background: var(--bgSecondary-Color);
-  padding: 5rem;
+  padding: 8rem;
   width: 100vw;
 }
 .contactSection h2 {
@@ -31,6 +31,7 @@
   padding: 0.2rem 1.5rem;
   color: white;
   background: var(--boxColor);
+  background: rgb(36, 51, 65);
   font-size: 1rem;
   border-radius: 2px;
 }
