--- a/src/components/PorfesionalProject/profesionalProject.module.css
+++ b/src/components/PorfesionalProject/profesionalProject.module.css
@@ -1,5 +1,5 @@
 .profesionalProjectSection {
-  padding: 5rem 0rem;
+  padding: 8rem 0rem;
   width: 100vw;
   background: var(--bgSecondary-Color);
 }
@@ -21,11 +21,13 @@
   flex: 1 1 calc(50% - 2rem);
   background: var(--boxColor);
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
 }
 .profesionalProjectIndividual img {
   width: 100%;
-  height: auto;
-  object-fit: contain;
+  height: 80%;
+  object-fit: cover;
 }
 .profesionalProjectIndividualText {
   margin-top: 1rem;
@@ -39,6 +41,8 @@
   padding: 0.2rem 0.1rem;
   width: 100px;
   background: var(--boxColor);
+  background: rgb(36, 51, 65);
+
   text-align: center;
   font-size: 0.9rem;
   border-radius: 5px;
