--- a/src/components/Social/social.module.css
+++ b/src/components/Social/social.module.css
@@ -1,5 +1,5 @@
 .SocialMain {
-  padding: 0.5rem 0.35rem;
+  padding: 0.5rem 0.25rem;
   position: fixed;
   top: 50%;
   left: 2rem;
@@ -7,8 +7,9 @@
   border-radius: 20px;
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
+  row-gap: 0.75rem;
 }
 .SocialMain img {
-  width: 35px;
+  width: 32px;
+  cursor: pointer;
 }
