--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -3,7 +3,8 @@
 .headerSection {
   width: 100vw;
   padding-top: 30vh;
-  padding-bottom: 5rem;
+  padding-bottom: 8rem;
+  min-height: 100vh;
 }
 .headerSectionBox {
   width: 90vw;
@@ -18,7 +19,7 @@
   font-size: 4rem;
 }
 .headerSectionBox p {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   margin: 0 auto;
   margin-top: 1rem;
   max-width: 1000px;
@@ -26,23 +27,35 @@
 
 /* skills */
 .skillsBox {
+  width: 90vw;
+  max-width: 1000px;
+  width: fit-content;
+  margin: 0 auto;
+  padding: 0.75rem 2rem;
   margin-top: 4rem;
   display: flex;
   justify-content: center;
   align-items: baseline;
   column-gap: 2rem;
+  /* background: var(--boxColor); */
+  /* background: rgb(36, 51, 65); */
+  border: 1px solid var(--boxColor);
+  border-radius: 5px;
+  box-shadow: 1px 1px 5px var(--boxColor);
 }
 .skillsBoxIndividual {
   text-align: center;
 }
 .skillsBoxIndividual img {
-  width: 40px;
+  width: 35px;
 }
 .skillsBoxIndividual p {
-  padding: 0.2rem 0rem;
-  width: 80px;
+  padding: 0.1rem 0rem;
+  width: 70px;
   margin-top: 0.25rem;
-  font-size: 0.7rem;
+  font-size: 0.65rem;
   background: var(--boxColor);
+  background: rgb(36, 51, 65);
   border-radius: 5px;
+  box-shadow: 1px 1px 2px var(--boxColor);
 }
