--- a/src/components/PersonalProject/personalProject.module.css
+++ b/src/components/PersonalProject/personalProject.module.css
@@ -1,6 +1,103 @@
 .personalProjectSection {
-  padding: 8rem 0rem;
+  padding: 6rem 0rem 8rem 0rem;
 }
 .personalProjectSection h2 {
   text-align: center;
+}
+.personalProjectSectionBox {
+  width: 90vw;
+  max-width: var(--max-Width);
+  margin: 0 auto;
+  margin-top: 3rem;
+  display: flex;
+  justify-content: center;
+  column-gap: 2rem;
+  align-items: flex-end;
+}
+
+.personalProjectSectionFirts,
+.personalProjectSectionLast {
+  position: relative;
+  top: -20px;
+  padding: 0.5rem;
+  height: 250px;
+  flex: 1 1 calc(30% - 2rem);
+  background: var(--boxColor);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+.layer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(31, 31, 31, 0.586);
+  border-radius: 10px;
+}
+.personalProjectSectionMedium {
+  padding: 0.5rem;
+  flex: 1 1 calc(50% - 2rem);
+  background: var(--boxColor);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.profesionalProjectIndividual img,
+.profesionalProjectIndividualActive img {
+  width: 100%;
+  height: 80%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.profesionalProjectIndividualInactive img,
+.profesionalProjectIndividualActiveInactive img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.profesionalProjectIndividualSkills {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+.profesionalProjectIndividualSkillsInactive {
+  margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+.profesionalProjectIndividualSkills p {
+  padding: 0.2rem 0.1rem;
+  width: 100px;
+  background: var(--boxColor);
+  background: rgb(36, 51, 65);
+  text-align: center;
+  font-size: 0.9rem;
+  border-radius: 5px;
+}
+.profesionalProjectIndividualSkillsInactive p {
+  padding: 0.1rem 0.1rem;
+  width: 70px;
+  background: var(--boxColor);
+  background: rgb(36, 51, 65);
+  text-align: center;
+  font-size: 0.65rem;
+  border-radius: 5px;
+}
+.btnPrev,
+.btnNext {
+  align-self: center;
+  position: relative;
+  top: 70px;
+}
+.btnPrev {
+  transform: rotate(180deg);
+}
+.btnPrev img,
+.btnNext img {
+  width: 30px;
 }
