--- a/src/components/PorfesionalProject/profesionalProject.module.css
+++ b/src/components/PorfesionalProject/profesionalProject.module.css
@@ -1,5 +1,5 @@
 .profesionalProjectSection {
-  padding: 8rem 0rem;
+  padding: 6rem 0rem 8rem 0rem;
   width: 100vw;
   background: var(--bgSecondary-Color);
 }
@@ -8,7 +8,7 @@
 }
 .profesionalProjectBox {
   margin: 0 auto;
-  margin-top: 2rem;
+  margin-top: 3rem;
   width: 90vw;
   max-width: var(--max-Width);
   display: flex;
@@ -17,7 +17,7 @@
   flex-wrap: wrap;
 }
 .profesionalProjectIndividual {
-  padding: 1rem;
+  padding: 0.75rem;
   flex: 1 1 calc(50% - 2rem);
   background: var(--boxColor);
   border-radius: 10px;
@@ -28,6 +28,7 @@
   width: 100%;
   height: 80%;
   object-fit: cover;
+  border-radius: 10px;
 }
 .profesionalProjectIndividualText {
   margin-top: 1rem;
