--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -24,3 +24,9 @@
   color: var(--yellow-Color);
   font-size: 1.1rem;
 }
+
+@media (max-width: 600px) {
+  .navbarBoxLayout {
+    display: none;
+  }
+}
