--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,8 @@ p {
   color: white;
 }
 h2 {
+  margin: 0 auto;
+  max-width: 90vw;
   font-size: 2.5rem;
 }
 a {
@@ -35,4 +37,11 @@ button {
   background: transparent;
   border: transparent;
   cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  h2 {
+    font-size: 2.25rem;
+    line-height: 38px;
+  }
 }
