--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -8,6 +8,7 @@
   text-align: center;
 }
 .form {
+  width: 90vw;
   max-width: var(--max-Width);
   margin: 0 auto;
   margin-top: 3rem;
@@ -20,7 +21,7 @@
 }
 .inputLayout {
   display: flex;
-  column-gap: 2rem;
+  gap: 1.5rem 2rem;
 }
 .inputBox,
 .textareaBox {
@@ -76,4 +77,24 @@
 .form button:hover {
   transform: translate(1px, 1px);
   box-shadow: 0px 0px 0px var(--boxColor);
+}
+
+@media (max-width: 600px) {
+  .contactSection {
+    padding: 4rem 0rem 6rem 0rem;
+  }
+  .form {
+    margin-top: 2rem;
+    padding: 2rem 1rem;
+  }
+  .inputLayout {
+    flex-direction: column;
+  }
+  .textareaBox {
+    margin-top: 1.5rem;
+  }
+  .form button {
+    width: 100%;
+    margin-top: 1.5rem;
+  }
 }
