--- a/src/components/PorfesionalProject/profesionalProject.module.css
+++ b/src/components/PorfesionalProject/profesionalProject.module.css
@@ -52,3 +52,12 @@
   font-size: 0.9rem;
   border-radius: 5px;
 }
+
+@media (max-width: 600px) {
+  .profesionalProjectSection {
+    padding: 4rem 0rem 6rem 0rem;
+  }
+  .profesionalProjectBox {
+    margin-top: 2rem;
+  }
+}
