--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -29,20 +29,18 @@
 
 /* skills */
 .skillsBox {
-  width: 90vw;
-  max-width: 1000px;
   width: fit-content;
+  max-width: 90vw;
   margin: 0 auto;
   padding: 0.75rem 2rem;
   margin-top: 4rem;
   display: flex;
   justify-content: center;
   align-items: baseline;
-  column-gap: 2rem;
+  gap: 1rem 2rem;
+  flex-wrap: wrap;
   background: var(--boxColor);
-  /* background: rgb(36, 51, 65); */
   border: 1px solid var(--boxColor);
-  /* border-radius: 5px; */
   box-shadow: 1px 1px 15px var(--boxColor);
 }
 .skillsBoxIndividual {
@@ -60,4 +58,25 @@
   background: rgb(36, 51, 65);
   border-radius: 5px;
   box-shadow: 1px 1px 2px var(--boxColor);
+}
+
+@media (max-width: 650px) {
+  .headerSection {
+    width: 100vw;
+    padding-top: 20vh;
+    padding-bottom: 8rem;
+    background-size: 95vw;
+  }
+  .headerSectionBox h1 {
+    font-size: 3rem;
+    line-height: 45px;
+  }
+  .headerSectionBox h2 {
+    font-size: 1.75rem;
+    margin-bottom: 0.5rem;
+  }
+  .headerSectionBox p {
+    font-size: 1.15rem;
+    text-wrap: balance;
+  }
 }
