--- a/src/components/Social/social.module.css
+++ b/src/components/Social/social.module.css
@@ -7,9 +7,22 @@
   border-radius: 20px;
   display: flex;
   flex-direction: column;
-  row-gap: 0.75rem;
+  gap: 0.75rem 0.5rem;
 }
 .SocialMain img {
   width: 32px;
   cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  .SocialMain {
+    padding: 0.25rem 0.5rem;
+    top: inherit;
+    bottom: 1rem;
+    left: 2rem;
+    flex-direction: row;
+  }
+  .SocialMain img {
+    width: 23px;
+  }
 }
