--- a/src/components/PersonalProject/personalProject.module.css
+++ b/src/components/PersonalProject/personalProject.module.css
@@ -1,5 +1,6 @@
 .personalProjectSection {
   padding: 6rem 0rem 8rem 0rem;
+  overflow-x: hidden;
 }
 .personalProjectSection h2 {
   text-align: center;
@@ -105,6 +106,6 @@
 
 @media (max-width: 600px) {
   .personalProjectSection {
-    display: none;
+    /* display: none; */
   }
 }
