--- a/src/components/PorfesionalProject/profesionalProject.module.css
+++ b/src/components/PorfesionalProject/profesionalProject.module.css
@@ -27,15 +27,28 @@
   display: flex;
   flex-direction: column;
   box-shadow: 1px 1px 5px var(--boxColor);
+  overflow-x: hidden;
 }
-.profesionalProjectIndividual img {
+.imageContainer {
   width: 100%;
-  height: 80%;
+  height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.imageContainer img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 10px;
+  cursor: pointer;
+  transition: var(--transition);
+}
+.imageContainer img:hover {
+  transform: scale(1.05);
 }
 .profesionalProjectIndividualText {
   margin-top: 1rem;
+  text-wrap: balance;
 }
 .profesionalProjectIndividualSkills {
   margin-top: 1rem;
