--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -22,6 +22,7 @@
 .inputLayout {
   display: flex;
   gap: 1.5rem 2rem;
+  align-items: flex-end;
 }
 .inputBox,
 .textareaBox {
@@ -56,6 +57,7 @@
 }
 .textareaBox {
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 .form button {
   display: block;
@@ -78,7 +80,14 @@
   transform: translate(1px, 1px);
   box-shadow: 0px 0px 0px var(--boxColor);
 }
-
+/* error */
+.textoError {
+  padding: 0.25rem 1rem;
+  color: rgb(128, 25, 25);
+  background: rgb(242, 151, 151);
+  width: fit-content;
+  margin-bottom: 0.25rem;
+}
 @media (max-width: 600px) {
   .contactSection {
     padding: 4rem 0rem 6rem 0rem;
@@ -97,4 +106,56 @@
     width: 100%;
     margin-top: 1.5rem;
   }
+}
+
+/* SUCCESS OR NOT SUCCES MESSAGE */
+.main {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.532);
+  backdrop-filter: blur(1px);
+  display: grid;
+  place-content: center;
+  z-index: 300;
+}
+
+.container {
+  width: 90vw;
+  max-width: 550px;
+  padding: 2rem 3rem;
+  background: #4d9cacea;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.container h2 {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  line-height: 40px;
+}
+.container p {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  line-height: 40px;
+}
+.symbolSucces {
+  font-size: 3rem;
+  color: var(--bg-Color);
+}
+.symbolError {
+  font-size: 3rem;
+  color: rgb(153, 31, 31);
+  font-weight: 600;
+}
+.container button {
+  margin: 0 auto;
+  margin-top: 0rem;
+  padding: 0.2rem 0.6rem;
+  font-size: 0.95rem;
+  background: black;
+  color: white;
 }
