--- a/src/components/PersonalProject/personalProject.module.css
+++ b/src/components/PersonalProject/personalProject.module.css
@@ -23,7 +23,7 @@
 }
 /* active */
 .personalProjectIndividualActive {
-  width: calc(33.3% - 2rem);
+  width: calc(35.3% - 2rem);
   background: var(--boxColor);
   padding: 0.75rem;
   border-radius: 10px;
@@ -44,7 +44,7 @@
 }
 .personalProjectIndividualActiveSkills p {
   padding: 0.2rem 0.1rem;
-  width: 100px;
+  /* width: 100px; */
   background: var(--boxColor);
   background: rgb(36, 51, 65);
   text-align: center;
@@ -85,7 +85,7 @@
 }
 .personalProjectIndividualInactiveSkills p {
   padding: 0.2rem 0.1rem;
-  width: 100px;
+  /* width: 100px; */
   background: var(--boxColor);
   background: rgb(36, 51, 65);
   text-align: center;
@@ -127,18 +127,18 @@
   position: relative;
   top: -15px;
   align-self: flex-end;
-  width: 270px;
+  width: 300px;
 
   height: 50%;
   background: var(--boxColor);
-  padding: 4rem 2rem 2rem 2rem;
+  padding: 3rem 2rem 2rem 2rem;
   border-radius: 10px;
 }
 .commingSoon {
   margin-top: 1rem;
 }
 .commingSoon p {
-  padding: 0.3rem 0.1rem;
+  padding: 0.3rem 0.2rem;
 
   background: var(--boxColor);
   background: rgb(36, 51, 65);
@@ -149,7 +149,11 @@
 
 .question {
   text-align: center;
-  font-size: 4rem;
+  font-size: 5rem;
+}
+.questionInactive {
+  text-align: center;
+  font-size: 3rem;
 }
 
 @media (max-width: 600px) {
