--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -33,12 +33,13 @@
 }
 .inputBox label,
 .textareaBox label {
-  width: fit-content;
+  width: 100px;
   padding: 0.15rem 1.25rem;
   color: white;
   background: var(--boxColor);
   /* background: rgb(36, 51, 65); */
   font-size: 0.9rem;
+  text-align: center;
   border-radius: 2px;
   border: 1px solid var(--boxColor);
   /* border-radius: 5px; */
