--- a/src/components/PersonalProject/personalProject.module.css
+++ b/src/components/PersonalProject/personalProject.module.css
@@ -151,16 +151,10 @@
   border-radius: 5px;
 }
 
-.question {
-  text-align: center;
-  font-size: 5rem;
-}
-.questionInactive {
-  text-align: center;
-  font-size: 3rem;
-}
-
 @media (max-width: 600px) {
+  .personalProjectSection {
+    padding: 6rem 0rem 6rem 0rem;
+  }
   .personalProjectSection h2 {
     font-size: 2rem;
   }
@@ -168,16 +162,15 @@
     margin-top: 2rem;
     row-gap: 1rem;
   }
+
   .personalProjectIndividualActive {
     width: 100%;
     padding: 0.5rem;
-    margin-bottom: 1.25rem;
+    margin-top: -0.9rem;
+    margin-bottom: 1rem;
   }
   .personalProjectIndividualInactive {
     width: 100%;
-  }
-  .commingSoon {
-    margin-top: 0rem;
   }
   /* COOMING SOON */
   .personalProjectIndividualInactiveCoomingSoon {
@@ -189,7 +182,7 @@
     padding: 2rem 2rem 1rem 2rem;
     border-radius: 10px;
   }
-  .question {
-    font-size: 3rem;
+  .commingSoon {
+    margin-top: 0rem;
   }
 }
